--- a/f35/Dockerfile
+++ b/f35/Dockerfile
@@ -1,5 +1,5 @@
 FROM registry.fedoraproject.org/fedora-toolbox:35
 LABEL org.opencontainers.image.source=https://github.com/mikebarkmin/fedora-toolbox
 
-RUN sudo dnf install -y neovim zsh ripgrep tmux stow git-crypt
+RUN sudo dnf install -y neovim zsh ripgrep tmux stow git-crypt sqlite
 RUN sudo dnf clean all
