--- a/f35-dev/Dockerfile
+++ b/f35-dev/Dockerfile
@@ -1,10 +1,11 @@
-FROM registry.fedoraproject.org/fedora-toolbox:35
+FROM ghcr.io/mikebarkmin/fedora-toolbox:35
 LABEL org.opencontainers.image.source=https://github.com/mikebarkmin/fedora-toolbox
 
 RUN sudo dnf install -y nodejs
 RUN sudo dnf install -y yarnpkg
 RUN sudo dnf install -y python3 python3-pip
 RUN sudo dnf install -y java-latest-openjdk openjfx
-RUN sudo dnf install -y texlive-scheme-full
 RUN sudo dnf install -y R
-RUN pip install uncommitted
+RUN sudo dnf install -y perl-CGI perl-autodie
+RUN sudo npm install -g prettier prettier-plugin-java typescript eslint pg-formatter
+RUN pip install uncommitted qmk
