--- a/f35-dev/Dockerfile
+++ b/f35-dev/Dockerfile
@@ -6,7 +6,6 @@ RUN sudo dnf install -y yarnpkg
 RUN sudo dnf install -y python3 python3-pip
 RUN sudo dnf install -y java-latest-openjdk openjfx
 RUN sudo dnf install -y R
-RUN sudo dnf install -y perl-CGI perl-autodie
 RUN sudo dnf install -y golang
-RUN sudo npm install -g prettier prettier-plugin-java typescript eslint pg-formatter
+RUN sudo npm install -g prettier prettier-plugin-java prettier-plugin-sql typescript eslint lua-fmt
 RUN pip install uncommitted qmk
