--- a/f35-video/Dockerfile
+++ b/f35-video/Dockerfile
@@ -1,5 +1,4 @@
 FROM ghcr.io/mikebarkmin/fedora-toolbox:35
 LABEL org.opencontainers.image.source=https://github.com/mikebarkmin/fedora-toolbox
 
-RUN sudo dnf install -y nodejs
-RUN sudo dnf install -y texlive-scheme-full
+RUN sudo dnf install -y wf-recorder
