--- a/f35/Dockerfile
+++ b/f35/Dockerfile
@@ -3,3 +3,8 @@ LABEL org.opencontainers.image.source=https://github.com/mikebarkmin/fedora-tool
 
 RUN sudo dnf install -y neovim zsh ripgrep tmux stow git-crypt sqlite
 RUN sudo dnf clean all
+# RPM FUSION
+RUN sudo dnf install -y https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm
+RUN sudo dnf install -y https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm
+
+RUN sudo install -y ffmpeg
