--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-  steps:
-    - uses: actions/checkout@v2
-    - name: run script
-      run: sh run.sh
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: run script
+        run: ./run.sh
