--- a/f36/Dockerfile
+++ b/f36/Dockerfile
@@ -7,4 +7,4 @@ RUN sudo dnf clean all
 RUN sudo dnf install -y https://download1.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm
 RUN sudo dnf install -y https://download1.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm
 
-RUN sudo install -y ffmpeg
+RUN sudo dnf install -y ffmpeg
